# QSPlugin

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/org/qp/qsplugin/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pixnpunk/qsplugin/: MainActivity.kt  QSPlugin.kt  RealRootComponent.kt  RootAppBar.kt  RootAppBarMenu.kt  RootComponent.kt  RootContent.kt  RootNavBar.kt
app/src/main/java/com/pixnpunk/qsplugin/mvi/: RealRootStore.kt  RootExecutor.kt  RootReducer.kt  RootStore.kt
app/src/main/java/com/pixnpunk/qsplugin/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/org/qp/qsplugin/: MainActivity.kt  QSPlugin.kt  RealRootComponent.kt  RootAppBar.kt  RootAppBarMenu.kt  RootComponent.kt  RootNavBar.kt  RootNavRail.kt
app/src/main/java/org/qp/qsplugin/mvi/: RealRootStore.kt  RootExecutor.kt  RootReducer.kt  RootStore.kt
app/src/main/java/org/qp/qsplugin/ui/theme/: Color.kt  (+2 more)
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/test/java/org/qp/qsplugin/: ExampleUnitTest.kt
core/dto/: build.gradle.kts
core/dto/src/main/java/com/pixnpunk/dto/: FontTypeface.kt  GameInterface.kt  GameSettings.kt  LibGameState.kt  LibGenItem.kt  LibIProxy.kt  LibReturnValue.kt  LibTypeDialog.kt  LibTypePopup.kt  LibTypeWindow.kt  LibUIConfig.kt  NativeLibAuthors.kt  TypefaceParceler.kt  URISerializer.kt
core/dto/src/main/java/org/qp/dto/: GameInterface.kt  GameSettings.kt  LibGameState.kt  LibGenItem.kt  LibIProxy.kt  LibReturnValue.kt  LibTypeDialog.kt  LibTypePopup.kt  LibTypeWindow.kt  LibUIConfig.kt  TypefaceParceler.kt  URISerializer.kt
core/utils/: build.gradle.kts
core/utils/src/androidTest/java/org/qp/utils/: ExampleInstrumentedTest.kt
core/utils/src/main/java/com/pixnpunk/utils/: Base64Util.kt  ColorUtil.kt  FileUtil.kt  HtmlUtil.kt  PathUtil.kt  ThreadUtil.kt  ViewUtil.kt
core/utils/src/main/java/org/qp/utils/: Base64Util.kt  ColorUtil.kt  FileUtil.kt  HtmlUtil.kt  PathUtil.kt  StreamUtil.kt  ThreadUtil.kt  ViewUtil.kt
core/utils/src/test/java/org/qp/utils/: ExampleUnitTest.kt
features/dialogs/presentation/: build.gradle.kts
features/extra/presentation/: build.gradle.kts
features/input/presentation/: build.gradle.kts
features/main/presentation/: build.gradle.kts
features/object/presentation/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
services/audio/: build.gradle.kts
services/audio/src/androidTest/java/org/qp/audio/: ExampleInstrumentedTest.kt
services/audio/src/main/java/com/pixnpunk/audio/: AudioPlayerModule.kt  AudioPlayerViewModel.kt
services/audio/src/main/java/org/qp/audio/: AudioPlayerModule.kt  AudioPlayerService.kt  AudioPlayerViewModel.kt
services/audio/src/test/java/org/qp/audio/: ExampleUnitTest.kt
services/native-lib/byte/: build.gradle.kts
services/native-lib/byte/src/main/cpp/: CMakeLists.txt
services/native-lib/qsengo/: build.gradle.kts
services/native-lib/seedharta/: build.gradle.kts
services/native-lib/seedharta/src/main/cpp/: CMakeLists.txt
services/native-lib/sonnix/: build.gradle.kts
services/native-lib/sonnix/src/main/cpp/: CMakeLists.txt
services/native-lib/supervisor/: build.gradle.kts
services/natives/: build.gradle.kts
services/natives/src/androidTest/java/com/pixnpunk/natives/: ExampleInstrumentedTest.kt
services/natives/src/main/cpp/: .gitignore  CMakeLists-qslibsdh.txt.in  CMakeLists-qslibsnx.txt.in  CMakeLists-qsp.txt.in  CMakeLists.txt
services/natives/src/main/java/com/libsdhqs/jni/: QSLibSDH.kt
services/natives/src/main/java/com/libsnxqs/jni/: QSLibSNX.kt
services/natives/src/main/java/com/pixnpunk/natives/: SupervisorViewModel.kt
services/natives/src/test/java/com/pixnpunk/natives/: ExampleUnitTest.kt
services/settings/: build.gradle.kts
services/settings/src/androidTest/java/org/qp/settings/: ExampleInstrumentedTest.kt
services/settings/src/main/java/com/pixnpunk/settings/: SettingsModule.kt  SettingsRepo.kt
services/settings/src/main/java/org/qp/settings/: SettingsModule.kt  SettingsRepo.kt
services/settings/src/test/java/org/qp/settings/: ExampleUnitTest.kt
(+108 files in other folders)
